--- a/src/gui/main.fxml
+++ b/src/gui/main.fxml
@@ -4,18 +4,22 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox fx:id="root"  spacing="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainController">
+<HBox fx:id="root" spacing="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainController">
    <children>
    
-         <VBox spacing="10">
+         <VBox alignment="TOP_CENTER" spacing="10">
             <children>
                <Button id="playButton" fx:id="playButton" mnemonicParsing="false" onAction="#playAction" prefHeight="42.0" prefWidth="104.0" text="play" />
                <Button id="SettingsButton" fx:id="settingsButton" mnemonicParsing="false" onAction="#settingsAction" prefHeight="42.0" prefWidth="104.0" text="settings" />
                <Button id="end" fx:id="end" mnemonicParsing="false" onAction="#settingsAction" prefHeight="42.0" prefWidth="104.0" text="end" />
+            <Label id="currentPlayerLbl" fx:id="currentPlayerLbl" />
+            <Label id="player1ScoreLbl" fx:id="player1ScoreLbl" />
+            <Label id="player2ScoreLbl" fx:id="player2ScoreLbl" />
+            <Label />
             </children>
          </VBox>
    </children>
