--- a/src/gui/main.fxml
+++ b/src/gui/main.fxml
@@ -1,26 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.Light.Distant?>
+<?import javafx.scene.effect.Lighting?>
+<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Text?>
 
-<HBox fx:id="root" spacing="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainController">
+<HBox fx:id="root" spacing="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainController">
    <children>
-   
-         <VBox alignment="TOP_CENTER" spacing="10">
+
+         <VBox id="sideBar" fx:id="sideBar" alignment="TOP_CENTER" spacing="10.0">
             <children>
-               <Button id="playButton" fx:id="playButton" mnemonicParsing="false" onAction="#playAction" prefHeight="42.0" prefWidth="104.0" text="play" />
-               <Button id="SettingsButton" fx:id="settingsButton" mnemonicParsing="false" onAction="#settingsAction" prefHeight="42.0" prefWidth="104.0" text="settings" />
-               <Button id="end" fx:id="end" mnemonicParsing="false" onAction="#settingsAction" prefHeight="42.0" prefWidth="104.0" text="end" />
+               <Button id="SettingsButton" fx:id="settingsButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#settingsAction" prefHeight="42.0" prefWidth="104.0" style="-fx-background-color: #461c00;" text="settings" textFill="WHITE" />
+            <Line endX="100.0" />
+            <Text id="currentPlayerTxt" fx:id="currentPlayerTxt" fill="#b14d00" text="Current player">
+               <effect>
+                  <Lighting>
+                     <bumpInput>
+                        <Shadow />
+                     </bumpInput>
+                     <light>
+                        <Light.Distant />
+                     </light>
+                  </Lighting>
+               </effect></Text>
             <Label id="currentPlayerLbl" fx:id="currentPlayerLbl" />
-            <Label id="player1ScoreLbl" fx:id="player1ScoreLbl" />
-            <Label id="player2ScoreLbl" fx:id="player2ScoreLbl" />
+            <Line endX="100.0" />
+            <Text id="player1ScoreTxt" fx:id="player1ScoreTxt" fill="#b14d00" text="Player 1 score">
+               <effect>
+                  <Lighting>
+                     <bumpInput>
+                        <Shadow />
+                     </bumpInput>
+                     <light>
+                        <Light.Distant />
+                     </light>
+                  </Lighting>
+               </effect></Text>
+            <Label id="player1ScoreLbl" fx:id="player1ScoreLbl" text="2" textFill="#461c00" />
+            <Line endX="100.0" />
+            <Text id="player2ScoreTxt" fx:id="player2ScoreTxt" fill="#b14d00" text="Player 2 score">
+               <effect>
+                  <Lighting>
+                     <bumpInput>
+                        <Shadow />
+                     </bumpInput>
+                     <light>
+                        <Light.Distant />
+                     </light>
+                  </Lighting>
+               </effect></Text>
+            <Label id="player2ScoreLbl" fx:id="player2ScoreLbl" text="2" textFill="#461c00" />
+            <Label id="gameOver" fx:id="gameOver" />
             <Label />
             </children>
+         <padding>
+            <Insets right="10.0" top="10.0" />
+         </padding>
          </VBox>
    </children>
 
