--- a/src/gui/settings.fxml
+++ b/src/gui/settings.fxml
@@ -1,32 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SettingsController">
+<AnchorPane prefHeight="100.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SettingsController">
    <children>
-      <SplitPane dividerPositions="0.29797979797979796" layoutX="3.0" layoutY="4.0" prefHeight="600.0" prefWidth="600.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+      <SplitPane dividerPositions="0.5" layoutX="3.0" layoutY="4.0" orientation="VERTICAL">
+         <items>
+            <AnchorPane maxHeight="-Infinity" prefHeight="0.0" prefWidth="40.0">
                <children>
-                  <Label layoutX="27.0" layoutY="89.0" prefHeight="36.0" prefWidth="114.0" text="First player color" />
-                  <Label layoutX="27.0" layoutY="145.0" prefHeight="36.0" prefWidth="137.0" text="Second player color" />
-                  <Label layoutX="27.0" layoutY="199.0" prefHeight="36.0" prefWidth="137.0" text="Board size" />
+                  <Label layoutX="18.0" text="Reversi &gt; Settings" />
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+          <AnchorPane fx:id="ap" minHeight="0.0" minWidth="0.0" prefHeight="555.0" prefWidth="598.0">
                <children>
-                  <ColorPicker layoutX="81.0" layoutY="90.0" prefHeight="36.0" prefWidth="164.0" />
-                  <ColorPicker layoutX="81.0" layoutY="147.0" prefHeight="36.0" prefWidth="164.0" />
-                  <ChoiceBox fx:id="boardSizesBox" layoutX="81.0" layoutY="202.0" prefHeight="36.0" prefWidth="164.0" />
+                  <ColorPicker fx:id="player1Color" layoutX="294.0" layoutY="94.0" prefHeight="36.0" prefWidth="164.0" />
+                  <ColorPicker fx:id="player2Color" layoutX="294.0" layoutY="156.0" prefHeight="36.0" prefWidth="164.0" />
+                  <ChoiceBox fx:id="boardSizesBox" layoutX="294.0" layoutY="221.0" prefHeight="36.0" prefWidth="164.0" />
+                  <Label layoutX="96.0" layoutY="94.0" prefHeight="36.0" prefWidth="114.0" text="First player color" />
+                  <Label layoutX="96.0" layoutY="156.0" prefHeight="36.0" prefWidth="137.0" text="Second player color" />
+                  <Label layoutX="96.0" layoutY="221.0" prefHeight="36.0" prefWidth="137.0" text="Board size" />
+                  <Label layoutX="96.0" layoutY="39.0" text="Please choose your preference:">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                     <textFill>
+                        <LinearGradient endY="0.8221153846153846" startY="0.3317307692307693">
+                           <stops>
+                              <Stop color="BLACK" />
+                              <Stop color="BLACK" offset="0.007407407407407408" />
+                              <Stop color="#515151" offset="1.0" />
+                           </stops>
+                        </LinearGradient>
+                     </textFill>
+                  </Label>
+                  <Button fx:id="saveBtn" layoutX="234.0" layoutY="284.0" mnemonicParsing="false" onAction="#saveVal" prefHeight="40.0" prefWidth="121.0" style="-fx-background-radius: 6;" text="Save" />
                </children>
             </AnchorPane>
-        </items>
+         </items>
       </SplitPane>
    </children>
 </AnchorPane>
