--- a/src/gui/main.fxml
+++ b/src/gui/main.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Text?>
 
@@ -18,8 +19,9 @@
             <children>
             <Button id="closeButton" fx:id="closeButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#closeAction" prefHeight="0.0" prefWidth="98.0" style="-fx-background-color: #461c00; -fx-background-radius: 6;" text="Close" textFill="WHITE" />
                <Button id="SettingsButton" fx:id="settingsButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#settingsAction" prefHeight="0.0" prefWidth="98.0" style="-fx-background-color: #461c00; -fx-background-radius: 6;" text="Settings" textFill="WHITE" />
+            <Button id="startButton" fx:id="startButton" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="20.0" mnemonicParsing="false" onAction="#settingsAction" prefHeight="42.0" prefWidth="104.0" style="-fx-background-color: #461c00;" text="Start" textFill="WHITE" />
             <Line endX="100.0" />
-            <Text id="currentPlayerTxt" fx:id="currentPlayerTxt" fill="#b14d00" text="Current player">
+            <Text id="currentPlayerTxt" fx:id="currentPlayerTxt" text="Current player">
                <effect>
                   <Lighting>
                      <bumpInput>
@@ -30,9 +32,13 @@
                      </light>
                   </Lighting>
                </effect></Text>
-            <Label id="currentPlayerLbl" fx:id="currentPlayerLbl" />
+            <Line endX="100.0" layoutX="13.0" layoutY="173.0" />
+            <Circle id="currentPlayerCircle" fx:id="currentPlayerCircle" fill="#1265b20f" layoutX="62.0" layoutY="206.0" radius="12.0" stroke="BLACK" strokeType="INSIDE" />
             <Line endX="100.0" />
-            <Text id="player1ScoreTxt" fx:id="player1ScoreTxt" fill="#b14d00" text="Player 1 score">
+            <Label text="Scores" />
+            <Line endX="100.0" layoutX="13.0" layoutY="136.0" />
+            <Circle id="player1ScoreCircle" fx:id="player1ScoreCircle" fill="#1265b20f" radius="12.0" stroke="BLACK" strokeType="INSIDE" />
+            <Text id="player1ScoreTxt" fx:id="player1ScoreTxt" fill="#b14d00" text=" Player 1">
                <effect>
                   <Lighting>
                      <bumpInput>
@@ -45,7 +51,8 @@
                </effect></Text>
             <Label id="player1ScoreLbl" fx:id="player1ScoreLbl" text="2" textFill="#461c00" />
             <Line endX="100.0" />
-            <Text id="player2ScoreTxt" fx:id="player2ScoreTxt" fill="#b14d00" text="Player 2 score">
+            <Circle id="player2ScoreCircle" fx:id="player2ScoreCircle" fill="#1265b20f" layoutX="62.0" layoutY="206.0" radius="12.0" stroke="BLACK" strokeType="INSIDE" />
+            <Text id="player2ScoreTxt" fx:id="player2ScoreTxt" fill="#b14d00" text=" Player 2 ">
                <effect>
                   <Lighting>
                      <bumpInput>
