--- a/src/gui/main.fxml
+++ b/src/gui/main.fxml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Main">
+<AnchorPane prefHeight="400.0" prefWidth="400.0" style="-fx-background-image: url(wallpaper.jpg);" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Main">
    <children>
       <VBox layoutX="121.0" layoutY="114.0" prefHeight="172.0" prefWidth="158.0" spacing="10.0">
          <children>
-             <Button id="startButton" fx:id="startButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#startAction" prefHeight="80.0" prefWidth="160.0" style="-fx-background-color: #461c00;" text="Start" textFill="WHITE" />
-             <Button id="SettingsButton" fx:id="settingsButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#settingsAction" prefHeight="80.0" prefWidth="160.0" style="-fx-background-color: #461c00;" text="Settings" textFill="WHITE" />
+            <Button id="startButton" fx:id="startButton" alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#startAction" prefHeight="80.0" prefWidth="160.0" style="-fx-background-radius: 6; -fx-background-color:linear-gradient(#002444, #144C7D);  -fx-effect: dropshadow( three-pass-box , rgba(255,255,255,0.2) , 10, 0.0 , 0 , 5);" text="Start" textFill="WHITE" />
+            <Button id="SettingsButton" fx:id="settingsButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#settingsAction" prefHeight="80.0" prefWidth="160.0" style="-fx-background-radius: 6; -fx-background-color:linear-gradient(#002444, #144C7D);  -fx-effect: dropshadow( three-pass-box , rgba(255,255,255,0.2) , 10, 0.0 , 0 , 5);" text="Settings" textFill="WHITE" />
+            <Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeAction" prefHeight="80.0" prefWidth="160.0" style="-fx-background-radius: 6; -fx-background-color:linear-gradient(#002444, #144C7D);  -fx-effect: dropshadow( three-pass-box , rgba(255,255,255,0.2) , 10, 0.0 , 0 , 5);" text="Close" textFill="WHITE" />
          </children>
       </VBox>
    </children>
 
 </AnchorPane>
-
